# lunch-menus

./: .gitignore  DEPLOYMENT.md  README.md  config.example.env  pyproject.toml  requirements.txt  run_ci_checks.sh  setup.py  test_current_day.py  test_scrapers.py  test_telegram_bot.py
.github/: dependabot.yml
.github/workflows/: daily-scrape.yml  dependabot-automerge.yml  test-pr.yml
src/: __init__.py  scraper.py  telegram_bot.py
src/restaurants/: __init__.py  base.py  kahvila_epila.py  kontukeittio.py  nokian_kartano.py  pizza_buffa.py  stahlberg_kolmenkulma.py  stahlberg_lielahti.py
tests/: test_current_day.py  test_kahvila_epila_parsing.py  test_scrapers.py  test_stahlberg_kolmenkulma_parsing.py  test_stahlberg_lielahti_parsing.py  test_telegram_bot.py
